--- a/Lab01/lab1_.ipynb
+++ b/Lab01/lab1_.ipynb
@@ -66,6 +66,26 @@
     "print(f'к-ть коректне значеня вологості: {count_correct_points}')\n",
     "print(f'к-ть точок з помилковими розрахунками: {count_wrong_points}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BoundingBox(left=29.566633136000007, bottom=49.434589403000004, right=31.185382877000006, top=50.486672568)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.bounds"
+   ]
   }
  ],
  "metadata": {
